syntax = "proto3";

package forwarding;

option go_package = "github.com/mutagen-io/mutagen/pkg/forwarding";

import "forwarding/session.proto";

// Status encodes the status of a forwarding session.
enum Status {
    // Status_Disconnected indicates that the session is disconnected.
    Disconnected = 0;
    // Status_ConnectingSource indicates that the session is in the process of
    // connecting to the source endpoint.
    ConnectingSource = 1;
    // Status_ConnectingDestination indicates that the session is in the process
    // of connecting to the destination endpoint.
    ConnectingDestination = 2;
    // Status_ForwardingConnections indicates that the session is connected and
    // currently forwarding connections.
    ForwardingConnections = 3;
}

// EndpointState encodes the current state of a forwarding endpoint. It is
// mutable within the context of the daemon, so it should be accessed and
// modified in a synchronized fashion. Outside of the daemon (e.g. when returned
// via the API), it should be considered immutable.
message EndpointState {
    // Connected indicates whether or not the controller is currently connected
    // to the endpoint.
    bool connected = 1;
}

// State encodes the current state of a forwarding session. It is mutable within
// the context of the daemon, so it should be accessed and modified in a
// synchronized fashion. Outside of the daemon (e.g. when returned via the API),
// it should be considered immutable.
message State {
    // Session is the session specification.
    Session session = 1;
    // Status is the status of the session.
    Status status = 2;
    // LastError indicates the last error that occurred during forwarding.
    string lastError = 3;
    // OpenConnections is the number of connections currently open and being
    // forwarded.
    uint64 openConnections = 4;
    // TotalConnections is the number of total connections that have been opened
    // and forwarded (including those that are currently open).
    uint64 totalConnections = 5;
    // SourceState encodes the state of the source endpoint. It is always
    // non-nil.
    EndpointState sourceState = 6;
    // DestinationState encodes the state of the destination endpoint. It is
    // always non-nil.
    EndpointState destinationState = 7;
}
