syntax = "proto3";

package core;

option go_package = "github.com/mutagen-io/mutagen/pkg/synchronization/core";

import "synchronization/core/entry.proto";

// Snapshot bundles a filesystem content snapshot with associated metadata.
// Snapshot objects should be considered immutable and must not be modified.
message Snapshot {
    // Content is the filesystem content at the snapshot root. It may be nil to
    // indicate an absence of content.
    Entry content = 1;
    // PreservesExecutability indicates whether or not the associated filesystem
    // preserves POSIX executability bits.
    bool preservesExecutability = 2;
    // DecomposesUnicode indicates whether or not the associated filesystem
    // decomposes Unicode names.
    bool decomposesUnicode = 3;
    // Directories is the number of synchronizable directory entries contained
    // in the snapshot.
    uint64 directories = 4;
    // Files is the number of synchronizable file entries contained in the
    // snapshot.
    uint64 files = 5;
    // SymbolicLinks is the number of synchronizable symbolic link entries
    // contained in the snapshot.
    uint64 symbolicLinks = 6;
    // TotalFileSize is the total size of all synchronizable files referenced by
    // the snapshot.
    uint64 totalFileSize = 7;
}
